# fomaJNI

./: .gitignore  App.cpp  CMakeLists.txt  FomaWrapper.cpp  FomaWrapper.h  LICENSE  README.md  build.sh  eng.fst  test.c
foma/: App.java
include/: foma_App.h
